fixed text selection too dark in chrome / electron

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,8 +7,8 @@
   --highlight-color: #0b4a73;
   --highlight-contrast: #083c5a;
 
-  --selected: #37373d;
-  --selected-color: #314136;
+  --selected: rgba(123, 167, 138, .99);  // fix too dark selection by chrome
+  --selected-dark: #314136;
 
   --field-color: #3c3c3c;
 
@@ -69,7 +69,7 @@
 }
 
 #notes-column .note progress[value]::-webkit-progress-value, .notes .note progress[value]::-webkit-progress-value{
-  background-color: var(--selected-color);
+  background-color: var(--selected-dark);
 }
 #notes-column .note.selected progress[value]::-webkit-progress-value, .notes .note.selected progress[value]::-webkit-progress-value{
   background-color: var(--sn-stylekit-info-color);
@@ -112,6 +112,6 @@
 #editor-title-bar > .title > .input::selection,
 input::selection, textarea::selection,
 *::selection{
-  background: var(--sn-stylekit-info-color) !important;
-  color: var(--foreground-color) !important;
+  background: var(--selected) !important;
+  color: var(--background-2) !important;
 }
